test/fail/basic_syntax/integer_construct.lly
#[
SyntaxError: Class Integer does not have a constructor.
    from integer_construct.lly:6:
]#

var v = Integer(10)
